important changes: * weighted F1 score now also for binary classification to prevent errors when 1 is not the class of interest * binary numerics now forced to factors t ensure that they are treated as classification problems * contextual seed used to ensure that naive random predictions result in the same predictions every iteration. This ensures more stable results * minor textual changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,4 +20,5 @@ Imports:
     parsnip (>= 0.1.4),
     tidyr (>= 1.1.2),
     tidyselect (>= 1.1.0),
-    rpart (>= 4.1.15)
+    rpart (>= 4.1.15),
+    withr (>= 2.3.0)
