major change to how score() function works
* score() now provides a detailed report of the calculations and settings
* score() now also takes in a data.frame and the x/y column names
* score() now runs multiple checks and when an error is encountered the description is returned as result_type
* all three scores (model, naive, and normalized) are now calculated simulatenously for every cross-validation
* metrics are now standardized in functions which are retrieved using their name

necessary developments:

* score() now returns a list but this should be transformed into a data.frame
* score_predictors() needs to be parallelized
* score_matrix() should call the parallelized score_predictors()
* new functions should transform the score/matrix/predictors results into score/matrix/predictor overviews

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(eval_macro_f1_score)
 export(eval_mae)
 export(eval_rmse)
 export(eval_weighted_f1_score)
+export(evaluation_functions)
 export(score)
 export(score_matrix)
 export(score_predictors)
