--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,10 @@ export(eval_rmse)
 export(eval_weighted_f1_score)
 export(evaluation_functions)
 export(score)
+export(score_correlations)
+export(score_df)
 export(score_matrix)
 export(score_predictors)
-export(visualize_matrix)
-export(visualize_predictors)
+export(visualize_both)
+export(visualize_correlations)
+export(visualize_pps)
